--- a/upsurge/package.json
+++ b/upsurge/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "gsap": "^3.12.3",
+    "framer-motion": "^10.16.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.5.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
