--- a/upsurge/package.json
+++ b/upsurge/package.json
@@ -10,8 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "gsap": "^3.12.3",
+    "embla-carousel-react": "^8.0.0-rc15",
     "framer-motion": "^10.16.9",
+    "gsap": "^3.12.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.3"
